layout issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -167,28 +167,31 @@ body {
 }
 .home-banner-video-container {
   position: absolute;
-  height: 100%;
+
   background: $banner-img;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 .home-banner-video {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 0;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: 0;
 }
 .banner-video-tint {
   content: ''; // ::before and ::after both require content
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
   background-image: linear-gradient(352deg, #000000b6, #6b8c96);
   opacity: 0.5;
 }
